[gd_scene load_steps=15 format=3 uid="uid://b4d05y72uj263"]

[ext_resource type="Script" path="res://gdscript/player.gd" id="1_rmsn2"]
[ext_resource type="Script" path="res://level.gd" id="2_74go3"]
[ext_resource type="Texture2D" uid="uid://3lbwhp1dfm1w" path="res://player/387589420_854933625959966_2668475148856670804_n.png" id="2_708pa"]
[ext_resource type="Texture2D" uid="uid://bayu72gju36xr" path="res://gun/StG 44.png" id="3_ok2b2"]
[ext_resource type="Script" path="res://level_bar.gd" id="3_w4jpd"]
[ext_resource type="Script" path="res://gdscript/gun.gd" id="4_yq6s2"]
[ext_resource type="AudioStream" uid="uid://ds4jfmlty2qqq" path="res://sound/AK-47 Single Shot 01 - QuickSounds.com.mp3" id="7_6iy0e"]

[sub_resource type="Animation" id="Animation_hov86"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nrjih"]
resource_name = "walkDown"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bo1am"]
resource_name = "walkLeft"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_0preg"]
resource_name = "walkRight"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_021dk"]
resource_name = "walkUp"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bvnnb"]
_data = {
"RESET": SubResource("Animation_hov86"),
"walkDown": SubResource("Animation_nrjih"),
"walkLeft": SubResource("Animation_bo1am"),
"walkRight": SubResource("Animation_0preg"),
"walkUp": SubResource("Animation_021dk")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4lhmq"]
radius = 23.5
height = 96.5

[node name="player" type="CharacterBody2D" groups=["player"]]
position = Vector2(338, 205)
script = ExtResource("1_rmsn2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 7)
texture = ExtResource("2_708pa")
hframes = 6
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_bvnnb")
}

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="level_bar" type="ProgressBar" parent="Camera2D"]
modulate = Color(0.905882, 0.176471, 0.65098, 1)
clip_contents = true
offset_left = -34.0
offset_top = -78.0
offset_right = 100.0
offset_bottom = -58.0
scale = Vector2(0.5, 0.5)
max_value = 5.0
show_percentage = false
script = ExtResource("3_w4jpd")
metadata/_edit_use_anchors_ = true

[node name="level" type="Label" parent="Camera2D"]
clip_children = 2
y_sort_enabled = true
clip_contents = true
layout_direction = 1
offset_left = -27.0
offset_top = -99.0
offset_right = 27.0
offset_bottom = -73.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Level 1"
script = ExtResource("2_74go3")
metadata/_edit_use_anchors_ = true

[node name="gun" type="Sprite2D" parent="."]
top_level = true
position = Vector2(342, 208)
texture = ExtResource("3_ok2b2")
script = ExtResource("4_yq6s2")

[node name="Marker2D" type="Marker2D" parent="gun"]
z_as_relative = false
position = Vector2(28, -8)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="gun"]
stream = ExtResource("7_6iy0e")
max_polyphony = 10

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0.5, -6.25)
shape = SubResource("CapsuleShape2D_4lhmq")

[node name="hpbar" type="ProgressBar" parent="."]
modulate = Color(0, 0.686275, 0.541176, 1)
clip_contents = true
offset_left = -34.0
offset_top = -66.0
offset_right = 33.0
offset_bottom = -55.0
max_value = 10.0
value = 10.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="atk_cd" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="atk_cd" to="." method="_on_atk_cd_timeout"]
